Update configuration and documentation for AskPablos API client
- Increase default timeout from 30 to 45 seconds in config.py
- Add project URLs in pyproject.toml for better accessibility
- Enhance documentation in index.rst and README.md with additional features and usage examples
- Improve quickstart guide and installation instructions in quickstart.rst and installation.rst

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,13 @@ dependencies = [
     "requests>=2.25.0"
 ]
 
+[project.urls]
+"Homepage" = "https://github.com/fawadss1/askpablos_api"
+"Documentation" = "https://askpablos-api.readthedocs.io/en/latest/"
+"Repository" = "https://github.com/fawadss1/askpablos_api"
+"Issues" = "https://github.com/fawadss1/askpablos_api/issues"
+"PyPI" = "https://pypi.org/project/askpablos-api/"
+
 [project.optional-dependencies]
 dev = [
     "pytest>=6.0",
@@ -58,12 +65,6 @@ docs = [
     "sphinx-rtd-theme>=1.0",
     "myst-parser>=0.15"
 ]
-
-[project.urls]
-"Homepage" = "https://github.com/fawadss1/askpablos-api"
-"Documentation" = "https://askpablos-api.readthedocs.io"
-"Repository" = "https://github.com/fawadss1/askpablos-api"
-"Bug Tracker" = "https://github.com/fawadss1/askpablos-api/issues"
 
 [tool.setuptools.packages.find]
 where = ["."]
